[tool.poetry]
name = "netcam-aioexos"
version = "0.1.0"
description = "NetCAD/CAM - Extreme EXOS asyncio driver"
readme = "README.md"
authors = ["Jeremy Schulman"]

[tool.poetry.dependencies]
   python = ">=3.10"
   netcad = ">=0.20.0"
   pydantic-env = ">=0.3.0"
   asyncssh = "^2.14.2"
   aio-exos = "^0.4.0"

[tool.poetry.group.dev.dependencies]
interrogate = "^1.7.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]
